compiler/src/test/resources/amyc/typer/failing/OperatorError3.amy
module OperatorError
    val str: String = !true;
    str
end OperatorError
